# rFortune

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: aur.yml  ci.yml  release.yml  rust.yml
src/: cli.rs  commands.rs  config.rs  fortune.rs  lib.rs  loader.rs  log.rs  main.rs  utils.rs
tests/: cache_tests.rs  loader_tests.rs  utils_tests.rs
