[package]
name = "rfortune"
version = "0.5.0"
edition = "2024"
authors = ["Umpire274 <umpire274@gmail.com>"]
description = "A Rust-based clone of the classic UNIX 'fortune' command"
homepage = "https://github.com/umpire274/rFortune"
repository = "https://github.com/umpire274/rFortune"
license = "MIT"
readme = "README.md"
keywords = ["fortune", "cli", "quotes", "unix"]
categories = ["command-line-utilities"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
rand = "0.9.2"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.33"

